--- a/trunk/MP-TVSeries/Configuration/GUIConfiguration.resx
+++ b/trunk/MP-TVSeries/Configuration/GUIConfiguration.resx
@@ -134,7 +134,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0yLjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABS
-        dQAAAk1TRnQBSQFMAgEBCwEAAZQBAAGUAQABGAEAARgBAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFg
+        dQAAAk1TRnQBSQFMAgEBCwEAAYwBAQGMAQEBGAEAARgBAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFg
         AwABSAMAAQEBAAEgBgABbDEAAQEDBAEGAwsBDwMSBBkBIwMdASkDHgErAx0BKQMYASEDEQEXAwoBDgME
         AQUDAAEBLwAEAQECAwMEBAEFAwQBBQMDAQQDAgEDAwIBAwMBAQIDAQECAwABAQMAAQEXAAEBAxIBGAM1
         AVgDSgGLA1EBogNQAaMDUAGjA1ABowNQAaMDUAGjA1ABowNQAaMDUAGjA1ABowNQAaMDUAGjA1ABowNQ
@@ -640,73 +640,7 @@
   <metadata name="toolTip_Help.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>766, 17</value>
   </metadata>
-  <metadata name="toolTip_InfoHelp.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 56</value>
-  </metadata>
-  <data name="checkBox_Episode_HideUnwatchedSummary.ToolTip" xml:space="preserve">
-    <value>Enable this option to disable the overview for episodes that haven't been watched yet.
-This option is recommended if you want to prevent spoilers before watching an episodes.
-
-This setting can also be changed from within Media Portal in the plugins context menu.</value>
-  </data>
-  <data name="checkBox_Episode_HideUnwatchedThumbnail.ToolTip" xml:space="preserve">
-    <value>Enable this option to disable the thumbnail for episodes that haven't been watched yet.
-This option is recommended if you want to prevent spoilers before watching an episodes.
-
-This setting can also be changed from within Media Portal in the plugins context menu.</value>
-  </data>
-  <data name="checkBox_Episode_OnlyShowLocalFiles.ToolTip" xml:space="preserve">
-    <value>Enable this option to only display episodes in Media Portal that are found locally in import folders.
-Disable to show all seasons and episodes for series.
-
-This setting can also be changed from within Media Portal</value>
-  </data>
-  <metadata name="detailsPropertyBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>339, 17</value>
-  </metadata>
-  <data name="label70.Text" xml:space="preserve">
-    <value>Parsing Expressions are used by the plugins parsing engine to retrieve a Series Name, Season Number and 
-Episode Number from a Folder Structure / Filename in your Import Paths. This information is required to 
-successfully match up with episodes in the online database.
-
-If an expression can not evaluate these items, the next expression in the list is used.
-</value>
-  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="button_MoveExpUp.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAAlwSFlzAAAK8gAA
-        CvIBPVL3EQAAANxJREFUWEdj+P//P8NA4gG1HOTxUQcM/hBgIAzSCCnBl8gJhgABwxuB8sCUxJCPTx2t
-        HOAHtRzkgD9AbI/LEbRwgDrQsg9IDgA54hUQy2FzBLUdwA+05Cqa5SAHgPAZIOZEdwS1HbAOh+UwR8yn
-        pQPqCFgOc0QOsiOoFQLe0MQGswQf/ROo1gbmCGo4QAVLoiPkEFCilAY5glIH8OBJdIQccRKol41SB6Cn
-        KVBU4LNYl5aJEGT2qANGQ2A0BEZDYMBDAFTSzcSDweU/1WpDWveaCDZKRx0wGgK0DgEAOw5jgPZ9V4gA
-        AAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="button_MoveExpDown.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAAlwSFlzAAAK8gAA
-        CvIBPVL3EQAAANtJREFUWEdj+P//P8NA4gG1HOTxUQcM7hBgwAS6QKGZeLA0uhZCCRxvCGBxgDdQDJhy
-        cGKQA1HAqANGQ2A0BEZDYMiHAA+wWLtKoPTDVTKeBOpjo0YIqAAN+kCiI14B1YPrBWo4AGQOqA74Q6Qj
-        fgLV2cAqBGo5AGReHZEOyEGujajpAJC56wg4Yj6ta0N+PInyDFCOk9YOAJmvjiVRghKdHLrl1EyE6Gb7
-        IUUFKHHaY7Oclg4Amd0IdUQ+Lstp7QCQ+Wn4LKfYAYSyEDXkCZZU1LAEnxmjDhgNAQCx+mOArbVEmgAA
-        AABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="label69.Text" xml:space="preserve">
-    <value>String Replacements can be used to remove common string patterns that may confuse the plugins parsing engine. 
-It can also be helpful in replacing strange episode names that may not get automatically matched e.g:
-replace 'ttscc' with 'Terminator the Sarah Connor Chronicles'
-
-Be sure to enable 'run before matching' for this to work before it reaches the parsing engine.</value>
-  </data>
-  <data name="label68.Text" xml:space="preserve">
-    <value>Check the table below if the plugin was able to parse all of the episodes located in your Import Paths 
-defined above. Episodes not parsed correctly will be highlighted. If renaming your files does not help,
-you can modify the plugins parser behaviour from the left hand side tree view.</value>
-  </data>
   <data name="button_TestReparse.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
@@ -738,6 +672,42 @@ In all other cases you will be presented with a choice from available matches an
 what video and audio codecs the epsiode is encoded in etc...
 
 A Logo package must be installed to display logos succesfully in Media Portal</value>
+  </data>
+  <data name="textBox_TorrentDetailsRegex.ToolTip" xml:space="preserve">
+    <value>Regular expression that is going to extract data from the details page of a specific torrent.
+The plugin is only looking for one group:
+&lt;filecount&gt; is the number of files in the torrent. Only torrents with one file will be taken into account</value>
+  </data>
+  <data name="textBox_TorrentSearchRegex.ToolTip" xml:space="preserve">
+    <value>Regular expression that is going to extract data from the search results.
+Various group names are mandatory:
+
+&lt;name&gt; is the name of the torrent file
+&lt;link&gt; is the url of the torrent file, used to download (should be relative to the search website address)
+&lt;id&gt; is the id of the torrent file, that is used to then go in the details and find out how many files there are in the release (the plugin filters out all multi part torrents; extracting files from a RAR is inpractical)
+&lt;seeds&gt; is the number of seeds for this torrents; this is used to sort the results from highest number to lowest
+&lt;leechers&gt; is the number of leechers; not displayed / used yet</value>
+  </data>
+  <metadata name="toolTip_InfoHelp.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 56</value>
+  </metadata>
+  <data name="checkBox_Episode_HideUnwatchedSummary.ToolTip" xml:space="preserve">
+    <value>Enable this option to disable the overview for episodes that haven't been watched yet.
+This option is recommended if you want to prevent spoilers before watching an episodes.
+
+This setting can also be changed from within Media Portal in the plugins context menu.</value>
+  </data>
+  <data name="checkBox_Episode_HideUnwatchedThumbnail.ToolTip" xml:space="preserve">
+    <value>Enable this option to disable the thumbnail for episodes that haven't been watched yet.
+This option is recommended if you want to prevent spoilers before watching an episodes.
+
+This setting can also be changed from within Media Portal in the plugins context menu.</value>
+  </data>
+  <data name="checkBox_Episode_OnlyShowLocalFiles.ToolTip" xml:space="preserve">
+    <value>Enable this option to only display episodes in Media Portal that are found locally in import folders.
+Disable to show all seasons and episodes for series.
+
+This setting can also be changed from within Media Portal</value>
   </data>
   <data name="richTextBox_seasonFormat_Main.ToolTip" xml:space="preserve">
     <value>Enter in the field(s) to be displayed in the main information pane of the season view.
@@ -829,20 +799,48 @@ You can right click on this textbox to bring up a menu of available fields from 
 
 Default: &lt;Series.Pretty_Name&gt; e.g. The 4400</value>
   </data>
-  <data name="textBox_TorrentDetailsRegex.ToolTip" xml:space="preserve">
-    <value>Regular expression that is going to extract data from the details page of a specific torrent.
-The plugin is only looking for one group:
-&lt;filecount&gt; is the number of files in the torrent. Only torrents with one file will be taken into account</value>
-  </data>
-  <data name="textBox_TorrentSearchRegex.ToolTip" xml:space="preserve">
-    <value>Regular expression that is going to extract data from the search results.
-Various group names are mandatory:
+  <metadata name="detailsPropertyBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>339, 17</value>
+  </metadata>
+  <data name="label70.Text" xml:space="preserve">
+    <value>Parsing Expressions are used by the plugins parsing engine to retrieve a Series Name, Season Number and 
+Episode Number from a Folder Structure / Filename in your Import Paths. This information is required to 
+successfully match up with episodes in the online database.
 
-&lt;name&gt; is the name of the torrent file
-&lt;link&gt; is the url of the torrent file, used to download (should be relative to the search website address)
-&lt;id&gt; is the id of the torrent file, that is used to then go in the details and find out how many files there are in the release (the plugin filters out all multi part torrents; extracting files from a RAR is inpractical)
-&lt;seeds&gt; is the number of seeds for this torrents; this is used to sort the results from highest number to lowest
-&lt;leechers&gt; is the number of leechers; not displayed / used yet</value>
+If an expression can not evaluate these items, the next expression in the list is used.
+</value>
+  </data>
+  <data name="button_MoveExpUp.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAAlwSFlzAAAK8gAA
+        CvIBPVL3EQAAANxJREFUWEdj+P//P8NA4gG1HOTxUQcM/hBgIAzSCCnBl8gJhgABwxuB8sCUxJCPTx2t
+        HOAHtRzkgD9AbI/LEbRwgDrQsg9IDgA54hUQy2FzBLUdwA+05Cqa5SAHgPAZIOZEdwS1HbAOh+UwR8yn
+        pQPqCFgOc0QOsiOoFQLe0MQGswQf/ROo1gbmCGo4QAVLoiPkEFCilAY5glIH8OBJdIQccRKol41SB6Cn
+        KVBU4LNYl5aJEGT2qANGQ2A0BEZDYMBDAFTSzcSDweU/1WpDWveaCDZKRx0wGgK0DgEAOw5jgPZ9V4gA
+        AAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="button_MoveExpDown.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAAlwSFlzAAAK8gAA
+        CvIBPVL3EQAAANtJREFUWEdj+P//P8NA4gG1HOTxUQcM7hBgwAS6QKGZeLA0uhZCCRxvCGBxgDdQDJhy
+        cGKQA1HAqANGQ2A0BEZDYMiHAA+wWLtKoPTDVTKeBOpjo0YIqAAN+kCiI14B1YPrBWo4AGQOqA74Q6Qj
+        fgLV2cAqBGo5AGReHZEOyEGujajpAJC56wg4Yj6ta0N+PInyDFCOk9YOAJmvjiVRghKdHLrl1EyE6Gb7
+        IUUFKHHaY7Oclg4Amd0IdUQ+Lstp7QCQ+Wn4LKfYAYSyEDXkCZZU1LAEnxmjDhgNAQCx+mOArbVEmgAA
+        AABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="label69.Text" xml:space="preserve">
+    <value>String Replacements can be used to remove common string patterns that may confuse the plugins parsing engine. 
+It can also be helpful in replacing strange episode names that may not get automatically matched e.g:
+replace 'ttscc' with 'Terminator the Sarah Connor Chronicles'
+
+Be sure to enable 'run before matching' for this to work before it reaches the parsing engine.</value>
+  </data>
+  <data name="label68.Text" xml:space="preserve">
+    <value>Check the table below if the plugin was able to parse all of the episodes located in your Import Paths  defined above. Episodes not parsed correctly will be highlighted. If renaming your files does not help, you can modify the plugins parser behaviour from the left hand side tree view.</value>
   </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>92</value>
