--- a/branch/experimental_alternate_sql/MP-TVSeries/Properties/Resources.resx
+++ b/branch/experimental_alternate_sql/MP-TVSeries/Properties/Resources.resx
@@ -148,4 +148,16 @@
   <data name="tv_series_logo_noreflection" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Images\tv_series_logo_noreflection.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="importaccept" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Images\importaccept.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="importignored" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Images\importignored.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="importpending" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Images\importpending.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="importupdating" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Images\importupdating.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
