Created tag for v2.5.4.1080 release

--- a/MP-TVSeries/Configuration/MemoryBox.resx
+++ b/MP-TVSeries/Configuration/MemoryBox.resx
@@ -117,10 +117,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="contextMenuStripChangeCell.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
-  <metadata name="openFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>228, 17</value>
-  </metadata>
+  <data name="labelBody.Text" xml:space="preserve">
+    <value>This is the text of the Memory Box.  To change, set
+the LabelText property at run time.  Text is included here
+for easier spacing of the control.
+line 1
+line 2
+line 3
+line 4
+line 5
+line 6
+line 7
+line 8
+line 9
+line 10</value>
+  </data>
 </root>
