--- a/MP-TVSeries/Properties/Resources.resx
+++ b/MP-TVSeries/Properties/Resources.resx
@@ -166,4 +166,7 @@
   <data name="tick" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Images\tick.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="big_spinner" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Images\big_spinner.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
