Issue 427: Added ability to change episode *sort* order from GUI between 'Aired' or 'DVD' order. Menu available from the Action menu.
* changed matchOnlineToLocalEpisode so that DVD matching uses cCombinedSeasonNumber and cCombinedEpisodeNumber, this is better than the DVD equivalent as it also stores the aired order when no dvd order is available.

--- a/MP-TVSeries/Resources/Languages/en(us).xml
+++ b/MP-TVSeries/Resources/Languages/en(us).xml
@@ -272,4 +272,8 @@
 	<string Field="UnableToFindAny" Original="Unable to find any {0}">Unable to find any {0}</string>
 	<string Field="UnableToFindAnyEpisode" Original="Unable to find any episode">Unable to find any episode</string>
 
+  <string Field="SortBy" Original="Sort By">Sort By</string>
+  <string Field="DVDOrder" Original="DVD Order">DVD Order</string>
+  <string Field="AiredOrder" Original="Aired Order">Aired Order</string>
+  
 </strings>
