Issue 428: User can now change the 'Local File to Online Matching Method' for a series from the GUI without deleting and re-importing.
* 'Change Online Matching Method' is available from the Action menu. 
* Can choose from Available orders on-line e.g. Aired, DVD, Absolute plus added 'Title'
* Episode Sort order will be set according to the Chosen Matching above.

--- a/MP-TVSeries/Resources/Languages/en(us).xml
+++ b/MP-TVSeries/Resources/Languages/en(us).xml
@@ -275,5 +275,8 @@
   <string Field="SortBy" Original="Sort By">Sort By</string>
   <string Field="DVDOrder" Original="DVD Order">DVD Order</string>
   <string Field="AiredOrder" Original="Aired Order">Aired Order</string>
+  <string Field="AbsoluteOrder" Original="Absolute Order">Absolute Order</string>  
+  <string Field="Title" Original="Title">Title</string>
+  <string Field="ChangeOnlineMatchOrder" Original="Change Online Matching Method">Change Online Matching Method</string>
   
 </strings>
