Issue 333: Ability to UnHide episodes, seasons and series from GUI. Will use <selectedColor> of skin list control property to identify hidden episodes. If an episode is marked as remote or played and selected, then selected wins. Icons can still show remote/played states when selected.
New Options menu item 'Show Hidden Items' will allow you to toggle hidden episodes from view, this property is shared with the one currently used in Configuration.

Two new translations have been added 'UnHide' (the opposite of hide when selecting hidden episode) and 'Show Hidden Items'.

Issue 478: Episode Count for Season is not updated in season list facade when there is hidden episodes from view. Count will be based on what is seen like with 'Show Local Files' setting.

Issue 214: In-line sorting of specials were still being shown in episode views when Season 0/Specials season was set to Hidden (This was because the individual episodes were not hidden as well). Setting a season to hidden/unhidden will recursively set the property for each episode as well now. Users with current specials hidden and episodes not hidden will have to do a toggle manually to fix that up.

--- a/MP-TVSeries/Resources/Languages/en(us).xml
+++ b/MP-TVSeries/Resources/Languages/en(us).xml
@@ -282,5 +282,8 @@
   <string Field="InsertDiskMessageLine2" Original="is currently not available.">is currently not available.</string>
   <string Field="InsertDiskMessageLine3" Original="Please insert or connect media">Please insert or connect media</string>
   <string Field="InsertDiskMessageLine4" Original="labeled: {0}">labeled: {0}</string>
+  
+  <string Field="ShowHiddenItems" Original="Show Hidden Items">Show Hidden Items</string>
+  <string Field="UnHide" Original="UnHide">UnHide</string>
 
 </strings>
